<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.moviescatalogue.ui.detail.DetailViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/detail_container_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_movies"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:animateLayoutChanges="true"
            android:background="@color/hint_of_red"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/show_toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:collapsedTitleTextAppearance="@style/TextAppearance.Example.Toolbar.Text"
                app:contentScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="@color/bamboo"
                app:title="@{viewModel.detailContentMovie.title}"
                app:titleEnabled="false"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:id="@+id/detail_image_movie"
                    imgUrl="@{viewModel.detailContentMovie.posterPath}"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:contentDescription="@string/detail_image"
                    android:fitsSystemWindows="true"
                    android:scaleType="center"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_movies"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_detail"
                    app:navigationIcon="@drawable/ic_detail_back" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/detail_scroll_view_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:minHeight="750dp">

                <TextView
                    android:id="@+id/movies_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.detailContentMovie.title}"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/detail_overview_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="start"
                    android:lineSpacingExtra="4dp"
                    android:text="@{viewModel.detailContentMovie.overview}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movies_title"
                    tools:text="@string/overview" />

                <TextView
                    android:id="@+id/homepage_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@{viewModel.detailContentMovie.homepage}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_overview_movies"
                    tools:text="@string/homepage" />

                <TextView
                    android:id="@+id/genre_text_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="@string/genre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/homepage_movies" />

                <TextView
                    android:id="@+id/genre_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:lineSpacingExtra="4dp"
                    android:maxLines="2"
                    android:textStyle="italic"
                    app:genreTextMovies="@{viewModel.detailContentMovie.genres}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/genre_text_movies"
                    app:layout_constraintTop_toBottomOf="@+id/homepage_movies"
                    tools:text="@string/genre" />

                <TextView
                    android:id="@+id/status_text_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/status"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/genre_text_movies" />

                <TextView
                    android:id="@+id/status_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@{viewModel.detailContentMovie.status}"
                    app:layout_constraintStart_toEndOf="@+id/status_text_movies"
                    app:layout_constraintTop_toBottomOf="@+id/genre_text_movies"
                    tools:text="@string/status" />

                <TextView
                    android:id="@+id/date_text_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/date_release"
                    app:layout_constraintStart_toEndOf="@+id/status_movies"
                    app:layout_constraintTop_toBottomOf="@+id/genre_text_movies" />

                <TextView
                    android:id="@+id/date_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@{viewModel.detailContentMovie.releaseDate}"
                    app:layout_constraintStart_toEndOf="@+id/date_text_movies"
                    app:layout_constraintTop_toBottomOf="@+id/genre_text_movies"
                    tools:text="@string/date" />

                <TextView
                    android:id="@+id/popularity_text_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/popularity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/status_text_movies" />

                <TextView
                    android:id="@+id/popularity_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@{String.valueOf(viewModel.detailContentMovie.popularity)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/popularity_text_movies"
                    app:layout_constraintTop_toBottomOf="@+id/status_movies"
                    tools:text="@string/popularity" />

                <TextView
                    android:id="@+id/vote_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/vote"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popularity_text_movies" />

                <TextView
                    android:id="@+id/vote_average_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@{String.valueOf(viewModel.detailContentMovie.voteAverage)}"
                    app:layout_constraintStart_toEndOf="@+id/vote_movies"
                    app:layout_constraintTop_toBottomOf="@+id/popularity_movies"
                    tools:text="@string/vote" />

                <TextView
                    android:id="@+id/vote_count_text_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/vote_count"
                    app:layout_constraintStart_toEndOf="@+id/vote_average_movie"
                    app:layout_constraintTop_toBottomOf="@+id/popularity_movies" />

                <TextView
                    android:id="@+id/vote_count_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@{String.valueOf(viewModel.detailContentMovie.voteCount)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/vote_count_text_movies"
                    app:layout_constraintTop_toBottomOf="@+id/popularity_movies"
                    tools:text="@string/vote_count" />

                <TextView
                    android:id="@+id/original_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/original_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vote_average_movie" />

                <TextView
                    android:id="@+id/original_title_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@{viewModel.detailContentMovie.originalTitle}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/original_movies"
                    app:layout_constraintTop_toBottomOf="@+id/vote_average_movie"
                    tools:text="@string/original_title" />

                <TextView
                    android:id="@+id/tagline_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@{viewModel.detailContentMovie.tagline}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/original_title_movies"
                    tools:text="@string/tagline" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/backdrop_movie"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/backdop"
                    app:imgUrl="@{viewModel.detailContentMovie.backdropPath}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tagline_movie" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_movies"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="24dp"
                    android:contentDescription="@string/favorite"
                    android:padding="4dp"
                    app:backgroundTint="@color/blumine"
                    app:fabCustomSize="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>