...

                <ImageView
                    android:id="@+id/detail_image_shows"
                    imgUrl="@{viewModel.detailContentShows.posterPath}"
                    android:layout_width="match_parent"
...

                <TextView
                    android:id="@+id/shows_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/detail_overview_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/homepage_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/genre_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/status_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/date_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/popularity_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/vote_average_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/vote_count_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/original_title_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tagline_shows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_season_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
